# cppmatrix

./: CMakeLists.txt
app/: main.cpp
include/: matrix.hpp
src/: CMakeLists.txt  indices.hpp  matrix.cpp  matrix.hpp  matrixslice.hpp
unit_tests/: CMakeLists.txt  benchmark_indices.cpp
